Fixed images not stretching

--- a/css/main.css
+++ b/css/main.css
@@ -221,6 +221,7 @@ p {
   width: 280px;
   height: 180px;
   background: transparent;
+  object-fit: cover;
 }
 
 .card-text {
