--- a/css/recipes.css
+++ b/css/recipes.css
@@ -37,6 +37,7 @@
 .recipe-img {
   width: 250px;
   height: 200px;
+  object-fit: cover;
 }
 
 @media (max-width: 991px) {
